<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".view.StartFragment"
                                                   android:id="@+id/start_layout_parent"
                                                   android:background="@color/colorPrimary" android:elevation="0dp">
    <Button
            android:text="@string/string_start"
            android:id="@+id/btn_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/ActionButton"/>
    <TextView
            android:text="@string/string_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeMaxTextSize="32sp"
            app:autoSizeStepGranularity="2sp"
            android:id="@+id/start_tv_title" android:textColor="@android:color/white"
            android:textStyle="bold" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" android:maxLines="1" android:gravity="center"/>
    <TextView
            android:text="@string/string_pick_your_poison"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_pick_poison" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/start_tv_title"
            android:textColor="@android:color/white" android:textStyle="bold" android:textSize="16sp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_pick_poison" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/btn_start">
        <Button
                android:text="@string/string_the_warm_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btn_option1" style="@style/OptionButton"
                android:textAllCaps="false" android:layout_weight="1" android:layout_margin="8dp"/>
        <Button
                android:text="@string/string_question_your_morals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btn_option2" style="@style/OptionButton"
                android:layout_weight="1" android:layout_margin="8dp"/>
        <Button
                android:text="@string/r_rated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btn_option3" style="@style/OptionButton"
                android:layout_weight="1" android:layout_margin="8dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>